# stpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README  coroutine.hpp  logging.hpp  main.cpp
core/: autofree.hpp  consts.hpp  coroutine.hpp  error.hpp  io.hpp  logging.hpp  net.hpp  stpp.h
example/: CMakeLists.txt  example1.cpp  example2.cpp
